--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,6 @@ jobs:
     - uses: actions/checkout@v1
     - name: Build & Push Image
       run: |
-        docker login -u "hennighausen" ---p "Gummersbach123#"
+        docker login -u "hennighausen" ---p ""
         docker image build -t hennighausen/charls:v1
         docker push hennighausen/charls:v1
