--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,6 +16,6 @@ jobs:
     - uses: actions/checkout@v3
     - name: Build the Docker image
       run: |
-        docker login - u "hennighausen" -p ""
+        docker login - u "hennighausen" -p "Gummersbach123#"
         docker image build -t hennighausen/charls:v1 .
         docker push hennighausen/charls:v1
