--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -22,6 +22,9 @@ jobs:
     - uses: actions/checkout@v3
     - name: Build the Docker image
       run: |
+        echo ${{ gitgub.run_id }}
+        echo ${{ github.run_number }}
         echo "${{ secrets.DOCKERPW }}" | docker login -u "hennighausen" --password-stdin
-        docker image build -t hennighausen/charls:${{ github.event.inputs.name }} .
-        docker push hennighausen/charls:${{ github.event.inputs.name }}
+        docker image build -t hennighausen/charls:${{ github.run_id }} .
+        docker push hennighausen/charls:${{ github.run_id }}
+            
