--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -23,6 +23,6 @@ jobs:
     - name: Build the Docker image
       run: |
         echo "${{ secrets.DOCKERPW }}" | docker login -u "hennighausen" --password-stdin
-        docker image build -t hennighausen/charls:${{ github.run_id }} .
-        docker push hennighausen/charls:${{ github.run_id }}
+        docker image build -t hennighausen/charls:${{ github.run_number }} .
+        docker push hennighausen/charls:${{ github.run_number }}
             
