--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,28 +1,56 @@
-name: Docker Image CI
 
+# This is a basic workflow to help you get started with Actions
+
+name: Workflow1
+
+# Controls when the workflow will run
 on:
-  push:
-    branches:
-      - master
-      - development
   workflow_dispatch:
-    inputs:
-      name:
-        description: 'test'
-        default: 'v2'
+    inputs: 
+      workflow2_name:
+        description: 'Workflow2 Name for Triggering'
         required: true
+        default: 'Workflow2'
+      
+      workflow2_github_account:
+        description: 'GitHub Account Owner'
+        required: true
+        default: 'sumitraj0103'
+      
+      workflow2_repo_github:
+        description: 'GitHub Repository Name'
+        required: true
+        default: 'Letsdevops'
 
+# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-
+  # This workflow contains a single job called "build"
   build:
-
+    # The type of runner that the job will run on
     runs-on: ubuntu-latest
+    env: 
+      pat_token: ${{ secrets.Workflow2_PAT_TOKEN_GITHUB }}
+      payload_Baseline_Number: "BSL_001"
+      payload_Baseline_Revision: "zsfdgsdbgngffdwdx1dxvv2"
 
+    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-    - uses: actions/checkout@v3
-    - name: Build the Docker image
-      run: |
-        echo "${{ secrets.DOCKERPW }}" | docker login -u "hennighausen" --password-stdin
-        docker image build -t hennighausen/charls:${{ github.run_number }} .
-        docker push hennighausen/charls:${{ github.run_number }}
-            
+
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/checkout@v3
+
+      - name: setup python
+        uses: actions/setup-python@v2
+        with:
+         python-version: 3.8 #install the python needed
+         
+      - name: Install dependencies
+        run: |
+           cd "$GITHUB_WORKSPACE/Deployment-Scripts/"
+           python -m pip install --upgrade pip
+           pip install -r requirements.txt
+          
+      - name: Trigger the Workflow
+        run: |
+         cd "$GITHUB_WORKSPACE/Deployment-Scripts/"
+         python $GITHUB_WORKSPACE/Deployment-Scripts/workflow_trigger.py ${{ env.pat_token }}  ${{ github.event.inputs.workflow2_github_account}}  ${{ github.event.inputs.workflow2_repo_github}} ${{ github.event.inputs.workflow2_name}} ${{ env.payload_Baseline_Number }} ${{ env.payload_Baseline_Revision }}
