--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -52,5 +52,5 @@ jobs:
           
       - name: Trigger the Workflow
         run: |
-         cd "$GITHUB_WORKSPACE/Deployment-Scripts/"
-         python $GITHUB_WORKSPACE/Deployment-Scripts/workflow_trigger.py ${{ env.pat_token }}  ${{ github.event.inputs.workflow2_github_account}}  ${{ github.event.inputs.workflow2_repo_github}} ${{ github.event.inputs.workflow2_name}} ${{ env.payload_Baseline_Number }} ${{ env.payload_Baseline_Revision }}
+          git clone https://github.com/maxxam123/k8s-charls
+          ls -la
