--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -41,7 +41,7 @@ jobs:
         with:
           source-directory: 'Deployment-Scripts'
           destination-github-username: 'maxxam123'
-          destination-repository-name: 'k8s_charls/test'
+          destination-repository-name: 'k8s_charls'
           user-email: hennighausenmax@gmail.com
           target-branch: main
 
