--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -33,7 +33,12 @@ jobs:
     steps:
 
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v3      
+      - uses: actions/checkout@v3
+      - name: test
+        run: |
+          mkdir folder
+          echo test > folder
+          
       - name: Pushes to another repository
         uses: cpina/github-action-push-to-another-repository@main
         env:
