--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -37,14 +37,17 @@ jobs:
       - name: test
         run: |
           mkdir folder
-          echo test > folder
+          cd folder
+          touch neues
+          echo test > neues
+          cd ..
           
       - name: Pushes to another repository
         uses: cpina/github-action-push-to-another-repository@main
         env:
           API_TOKEN_GITHUB: ${{ secrets.GIT_REPO }}
         with:
-          source-directory: 'Deployment-Scripts'
+          source-directory: 'folder'
           destination-github-username: 'maxxam123'
           destination-repository-name: 'k8s_charls'
           user-email: hennighausenmax@gmail.com
