--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -40,7 +40,7 @@ jobs:
           cd folder
           mkdir folder2
           cd folder2
-          touch neues
+          git clone https://github.com/maxxam123/k8s_charls
           echo ${{github.run_number}} > neues
           cd ../..
           
