--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -45,8 +45,8 @@ jobs:
           mv k8s_charls/folder2/neues1 neues1
           echo ${{github.run_number}} > neues
           sed -i '19d' neues1
-          var=200
-          awk -i inplace 'NR==19{print "        image:nginx: v"}1' neues1
+          var=${{ github.run_number }}
+          awk -i inplace 'NR==19{print "        image: nginx:v"}1' neues1
           sed -i 19"s/$/$var &/" neues1
           cd ../..
           
